--- a/UI/css/stylesheet.css
+++ b/UI/css/stylesheet.css
@@ -1,45 +1,4 @@
 /* Imported Styles */
 
+@import "./global.css";
 @import "./auth.css";
-/* Global Styling */
-
-* {
-    padding: 0;
-    margin: 0;
-    outline: 0;
-    box-sizing: border-box;
-    background: none;
-    box-shadow: none;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    font-size: 1.4rem;
-    font-family: "Montserrat";
-    min-height: 100vh;
-    color: #222;
-    background-color: #F3F1F0;
-}
-
-button {
-    cursor: pointer;
-}
-
-.a-left {
-    text-align-last: left;
-}
-
-.a-right {
-    text-align: right;
-}
-
-.a-center {
-    text-align: center;
-}
-
-.small-spacing {
-    height: 1.6rem;
-}
