Features Dashboard Content Listing UI commit

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,3 +3,6 @@
 @import "./global.css";
 @import "./auth.css";
 @import "./header.css";
+@import "./layout.css";
+@import "./filters.css";
+@import "./entry.css";
