--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,6 @@
 /* Global Styling */
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
 * {
     padding: 0;
     margin: 0;
@@ -15,10 +16,11 @@ html {
 
 body {
     font-size: 1.4rem;
-    font-family: "Montserrat";
-    min-height: 100vh;
+    font-family: 'Roboto', sans-serif;
     color: #222;
     background-color: #F3F1F0;
+    letter-spacing: .1rem;
+    line-height: 2rem;
 }
 
 button {
@@ -43,4 +45,16 @@ button {
 
 a {
     text-decoration: none;
+}
+
+p {
+    font-weight: 300;
+}
+
+h4 {
+    font-weight: 500;
+}
+
+.tiny-title {
+    margin-bottom: 1rem;
 }
