--- a/css/entry.css
+++ b/css/entry.css
@@ -50,10 +50,6 @@
 }
 
 .diary-entry .notice {
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
     display: flex;
     font-size: 1rem;
     align-items: center;
@@ -81,7 +77,51 @@
     border-radius: 30px;
     color: #fff;
     cursor: pointer;
-    -webkit-box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 1px 4px 2px rgba(0, 0, 0, 0.1);
+}
+
+/* Responsiveness Styling*/
+
+@media only screen and (max-width: 587px) {
+    .diary-entry {
+        padding: 3rem;
+        margin-bottom: .3rem;
+    }
+    .diary-entry .description {
+        padding: 0;
+    }
+    .diary-entry .notice {
+        display: block;
+        font-size: 1rem;
+        text-align-last: left;
+    }
+    .notice .fav {
+        display: inline-block;
+    }
+    .notice .fav .fas {
+        vertical-align: middle;
+    }
+    .notice .timer {
+        display: inline;
+    }
+    .notice .details-btn {
+        margin-top: 2rem;
+    }
+    .float-btn {
+        display: block;
+        position: fixed;
+        bottom: 5%;
+        right: 10%;
+        background-color: #FF6839;
+        width: 5rem;
+        height: 5rem;
+        border-radius: 50%;
+        text-align: center;
+        font-size: 2rem;
+    }
+    .float-btn .fas {
+        margin-top: 50%;
+        transform: translateY(-50%);
+        color: #ffffff;
+    }
 }
