User's that are Logged In can view the Dashboard page: Completed.
Users will be able to view all their diary entries
[finishes #158949535]

--- a/css/entry.css
+++ b/css/entry.css
@@ -85,7 +85,7 @@
 @media only screen and (max-width: 587px) {
     .diary-entry {
         padding: 3rem;
-        margin-bottom: .3rem;
+        margin-bottom: 1rem;
     }
     .diary-entry .description {
         padding: 0;
