--- a/css/layout.css
+++ b/css/layout.css
@@ -10,6 +10,23 @@
     grid-gap: 16px;
 }
 
+.col-1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 16px;
+}
+
+.wrapper {
+    background-color: #ffffff;
+    width: 100%;
+    padding: 3rem 5rem;
+    margin: 3rem 0;
+}
+
+.wrapper:hover {
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1);
+}
+
 /* Responsiveness Styling*/
 
 @media only screen and (max-width: 587px) {
