Features-profile: Profile Statistics and reminder settings switch UI commit

--- a/css/layout.css
+++ b/css/layout.css
@@ -19,8 +19,8 @@
 .wrapper {
     background-color: #ffffff;
     width: 100%;
-    padding: 3rem 5rem;
-    margin: 3rem 0;
+    padding: 5rem;
+    margin: 2rem 0;
 }
 
 .wrapper:hover {
