--- a/css/profile.css
+++ b/css/profile.css
@@ -19,7 +19,7 @@
 }
 
 .user-image .change-image-btn {
-    background-color: #f7f7f7;
+    background-color: #A9DBD8;
     border: none;
     padding: .7rem 2rem;
     border-radius: 30px;
@@ -108,29 +108,17 @@
 
 /*Reminder Settings Styling*/
 
-/* .profile-settings {
-    background-color: #ffffff;
-    padding: 3rem 5rem;
-    margin-bottom: 3rem;
-}
-
-.profile-settings:hover {
-    -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1);
-} */
-
-.notification {
+.inner-notsat {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 2rem;
 }
 
-.notification p b {
+.inner-notsat p b {
     color: #AAAAAA;
 }
 
-.notification .notification-switch {
+.inner-notsat .notification-switch {
     text-align: right;
 }
 
@@ -160,10 +148,11 @@
     content: '';
     position: absolute;
     display: block;
-    width: 50%;
-    height: 100%;
-    top: 0;
-    border-radius: 30px;
+    width: 2rem;
+    height: 2rem;
+    top: 50%;
+    border-radius: 50%;
+    transform: translateY(-50%);
     left: 0;
     background-color: #444;
 }
@@ -172,4 +161,18 @@
     background-color: #FF6839;
     left: 50%;
     position: absolute;
+}
+
+.inner-notsat .statistics-figure {
+    font-size: 3rem;
+    line-height: 0;
+}
+
+.statistics-figure-wrap .statistics-figure b {
+    color: #222;
+    font-weight: 600;
+}
+
+.statistics-figure-wrap {
+    text-align: right;
 }
