--- a/css/global.css
+++ b/css/global.css
@@ -76,3 +76,8 @@ h4 {
 .cta-btn:hover {
     box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.2);
 }
+
+.big-title {
+    font-weight: 400;
+    font-size: 3rem;
+}
