User should be able to edit their profile details.: Completed
Features-editprofile page: Completed.
[finishes #158971334]

--- a/css/dashboard-forms.css
+++ b/css/dashboard-forms.css
@@ -50,4 +50,8 @@
     .editprofile .form-group label {
         font-size: 1rem;
     }
+    .editprofile .about-cont .form-control {
+        text-align-last: left;
+        height: 15rem;
+    }
 }
