--- a/css/modal.css
+++ b/css/modal.css
@@ -18,7 +18,7 @@
 }
 
 .modal-olay .form-group .form-control {
-    border: 1px solid #FF6839;
+    border: 1px solid #ff6839;
     padding: 2rem 1rem;
 }
 
@@ -58,26 +58,57 @@
 }
 
 .modal-olay .form-group .color-opt .one {
-    background-color: #0AD3FC;
+    background-color: #0ad3fc;
 }
 
 .modal-olay .form-group .color-opt .two {
-    background-color: #200AFC;
+    background-color: #200afc;
 }
 
 .modal-olay .form-group .color-opt .three {
-    background-color: #CC10D9;
+    background-color: #cc10d9;
 }
 
 .modal-olay .form-group .color-opt .four {
-    background-color: #FC0A3C;
+    background-color: #fc0a3c;
 }
 
 .modal-olay .form-group .color-opt .five {
-    background-color: #5AFC0A;
+    background-color: #5afc0a;
 }
 
 .modal-btn-wrap {
     text-align: center;
     padding: 3rem;
+}
+
+.modal-olay .modal-close {
+    position: absolute;
+    display: block;
+    top: 3rem;
+    right: 5rem;
+    color: #ffffff;
+    font-size: 5rem;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 587px) {
+    .modal-olay .form-group {
+        width: 100%;
+        padding: 3rem;
+        margin: 0 auto;
+        /* background-color: #ffffff; */
+    }
+    .modal-olay .form-group .color-opt label {
+        height: 3.5rem;
+        width: 3.5rem;
+    }
+    .modal-olay .modal-close {
+        top: 3rem;
+        right: 3rem;
+        font-size: 4rem;
+    }
+    .modal-olay .form-group .color-opt span {
+        margin: 1.2rem;
+    }
 }
