--- a/css/modal.css
+++ b/css/modal.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(17, 17, 17, .8);
     top: 0;
     left: 0;
     z-index: 9999999;
