--- a/css/forms.css
+++ b/css/forms.css
@@ -11,7 +11,7 @@
 .form-group .form-control {
     display: inline-block;
     border: 0;
-    color: #FF6839;
+    color: #222222;
     border-bottom: 1px solid #FF6839;
     width: 100%;
     height: 3rem;
@@ -20,7 +20,7 @@
 }
 
 .form-group .form-control::placeholder {
-    color: #FF6839;
+    color: #222222;
     font-weight: 500;
     font-size: 1.2rem;
 }
