--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,7 @@ header {
     position: fixed;
     width: 100vw;
     top: 0;
-    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 1rem rgba(134, 134, 134, .24);
     z-index: 999;
 }
 
