--- a/css/dashboard-forms.css
+++ b/css/dashboard-forms.css
@@ -74,7 +74,11 @@
         font-size: 1rem;
     }
     .editprofile .about-cont .form-control {
-        text-align-last: left;
+        text-align: left;
         height: 15rem;
+        color: #222222;
+    }
+    .form-group .form-control::placeholder {
+        color: #222222;
     }
 }
