--- a/UI/css/forms.css
+++ b/UI/css/forms.css
@@ -8,10 +8,19 @@
     display: block;
 }
 
+.form-group label {
+    display: block;
+    font-size: 1rem;
+    text-align: left;
+    line-height: 1rem;
+    margin-top: .5rem;
+    color: #FFC312;
+}
+
 .form-group .form-control {
     display: inline-block;
     border: 0;
-    color: #FF6839;
+    color: #222222;
     border-bottom: 1px solid #FF6839;
     width: 100%;
     height: 3rem;
@@ -20,13 +29,13 @@
 }
 
 .form-group .form-control::placeholder {
-    color: #FF6839;
+    color: #222222;
     font-weight: 500;
     font-size: 1.2rem;
 }
 
 .form-group .form-control::-webkit-input-placeholder {
-    color: #FF6839;
+    color: #222222;
     font-weight: 500;
     font-size: 1.2rem;
 }
@@ -43,5 +52,6 @@
     }
     .form-group .form-control {
         text-align: center;
+        color: #222222;
     }
 }
