form placeholder color change for --webkit commit

--- a/css/forms.css
+++ b/css/forms.css
@@ -26,7 +26,7 @@
 }
 
 .form-group .form-control::-webkit-input-placeholder {
-    color: #FF6839;
+    color: #222222;
     font-weight: 500;
     font-size: 1.2rem;
 }
