feat(adding-entry): adding entry functionality
- the select is getting data from database consuming the API addEntry endpoint

[Finishes #159630088]

--- a/css/auth.css
+++ b/css/auth.css
@@ -52,7 +52,7 @@
     position: relative;
 }
 
-.fa-spinner {
+.auth-inner button .fa-spinner {
     color: #ffffff;
     position: absolute;
     top: 20%;
