--- a/css/forms.css
+++ b/css/forms.css
@@ -14,7 +14,7 @@
     text-align: left;
     line-height: 1rem;
     margin-top: .5rem;
-    color: #3FBF79
+    color: #3FBF79;
 }
 
 .form-group .form-control {
