--- a/css/entry.css
+++ b/css/entry.css
@@ -29,10 +29,9 @@
     color: #bbb;
 }
 
-.category .color {
+.color {
     width: 1.3rem;
     height: 1.3rem;
-    background-color: #0AD3FC;
     display: inline-block;
     border-radius: 50%;
 }
