--- a/css/modal.css
+++ b/css/modal.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(17, 17, 17, .8);
+    background-color: rgba(17, 17, 17, .5);
     top: 0;
     left: 0;
     z-index: 9999999;
@@ -15,6 +15,7 @@
     width: 50rem;
     padding: 5rem;
     background-color: #ffffff;
+    border: 1px solid #FF6839;
 }
 
 .modal-olay .form-group .form-control {
