--- a/css/modal.css
+++ b/css/modal.css
@@ -59,23 +59,23 @@
 }
 
 .modal-olay .form-group .color-opt .one {
-    background-color: #0ad3fc;
+    background-color: #81ecec;
 }
 
 .modal-olay .form-group .color-opt .two {
-    background-color: #200afc;
+    background-color: #fd79a8;
 }
 
 .modal-olay .form-group .color-opt .three {
-    background-color: #cc10d9;
+    background-color: #fdcb6e;
 }
 
 .modal-olay .form-group .color-opt .four {
-    background-color: #fc0a3c;
+    background-color: #00b894;
 }
 
 .modal-olay .form-group .color-opt .five {
-    background-color: #5afc0a;
+    background-color: #cd84f1;
 }
 
 .modal-btn-wrap {
