--- a/css/entry.css
+++ b/css/entry.css
@@ -16,7 +16,7 @@
 .header .edit {
     text-align: right;
     display: block;
-    flex: 1 100%;
+    flex: 1 20%;
 }
 
 .header .fas {
@@ -42,6 +42,7 @@
     font-size: 1.6rem;
     letter-spacing: .05rem;
     line-height: 2.5rem;
+    min-height: 9rem;
 }
 
 .diary-entry .notice {
