feat(profile-page): profile page front-end functionality
- Users can see and modify their details
- Did refactoring
- Did UI modification

[Finishes #159822640]

--- a/css/entries-list.css
+++ b/css/entries-list.css
@@ -78,9 +78,9 @@
   width: 10rem;
 }
 
-/* .content .drawer {
-  display: block;
-} */
+.favStatus {
+  color: #ff6839;
+}
 
 .content .edit .fa-ellipsis-h .drawer ul li {
   text-align: left;
